# cyberwave-robot-format

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: release-pypi.yml
cyberwave_robot_format/: __init__.py  core.py  math_utils.py  schema.py  schema_export.py  serialization.py  utils.py
cyberwave_robot_format/mesh/: __init__.py  processing.py  resolution.py
cyberwave_robot_format/mjcf/: __init__.py  exporter.py  parser.py  scene_export.py  utils.py
cyberwave_robot_format/urdf/: __init__.py  exporter.py  mimic_inference.py  parser.py  scene_export.py
examples/: schema_composition_example.py
tests/: __init__.py  test_collision_filter.py  test_collision_mjcf_export.py  test_mimic_equality_export.py  test_mimic_inference.py  test_mjcf_parser.py  test_mjcf_scene_export.py  test_schema.py  test_schema_composition.py  test_schema_export.py  test_urdf_exporter.py  test_urdf_parser.py
tests/fixtures/: arm_two_prismatic.urdf  gripper_prismatic_pair.urdf  piper_description-mimic-joint.urdf  simple_robot.urdf  simple_robot.xml  simple_robot_golden.json
